<?xml version="1.0"?>
<package format="2">
  <name>glass_detection_navigation</name>
  <version>1.0.0</version>
  <description>The glass_detection_navigation package for detecting transparent obstacles using LiDAR and Sonar fusion.</description>
  <maintainer email="user@todo.todo">User</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>